<resources>
    <string name="app_name">Dine-And-Tell</string>
    <string name="delete_experience">Delete experience</string>
    <string name="no_experiences_yet">No experiences yet. Be the first to share!</string>
    <string name="tell_us_about_experience">Tell us about your experience</string>
    <string name="profile_title">My Profile</string>
    <string name="edit_profile_button">Edit</string>
    <string name="profile_default_username">John Doe</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
</resources>